W-14145992: Modularize memory-management module